--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -37,6 +35,38 @@
   padding: 2em;
 }
 
-.read-the-docs {
-  color: #888;
+
+#container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 100vw;
+  max-width: 100vw;
+  /* background-color: white; */
+}
+
+#title-and-scoreboard {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: darkgray;
+}
+
+#cards-container {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.playcard{
+  width: 500px;
+  height: 350px;
+  margin: 1rem;
+  background-color: darkblue;
+  border-radius: 1em;
+}
+
+.playcard:hover {
+  filter:drop-shadow(0 0 1.5rem lightblue)
 }
