--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root {
   margin: 0 auto;
   text-align: center;
+  overflow-x: hidden;
 }
 
 .logo {
@@ -48,25 +49,40 @@
 #title-and-scoreboard {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  background-color: darkgray;
 }
 
 #cards-container {
-  display: grid;
+  display: flex;
+  flex-wrap: wrap;
   gap: 2rem;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   margin-top: 5rem;
   margin-bottom: 5rem;
+  justify-content: space-between;
 }
 
 .playcard{
-  width: 500px;
-  height: 350px;
   margin: 1rem;
-  background-color: darkblue;
+  background-color: rgb(60, 60, 60);
   border-radius: 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
 }
 
 .playcard:hover {
   filter:drop-shadow(0 0 1.5rem lightblue)
+}
+
+.image-container{
+  width: 300px;
+  height: 250px;
+  overflow: hidden;
+}
+
+.image{
+  width: 100%;
+  height: auto;
+  margin-bottom: 1rem;
 }
